# tauri-plugin-autostart

./: .license_template  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: lib.rs
webview-dist/: index.js
webview-src/: index.ts
